// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My Account Layout View should not render any links if navData is empty 1`] = `
<Fragment>
  <Styled(Row)>
    <Styled(Col)
      colSize={
        Object {
          "large": 2,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <styled.ul />
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 10,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <mockConstructor />
    </Styled(Col)>
  </Styled(Row)>
</Fragment>
`;

exports[`My Account Layout View should render MyAccountLayoutView Correctly 1`] = `
<Fragment>
  <Styled(Row)>
    <Styled(Col)
      colSize={
        Object {
          "large": 2,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <styled.ul>
        <li
          id="accountOverview"
          key="accountOverview"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account"
            className="selected"
            to="/account?id=accountOverview"
          >
            Account Overview
          </Styled(Anchor)>
        </li>
        <li
          id="myPlaceRewards"
          key="myPlaceRewards"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/myPlaceRewards"
            className={false}
            to="/account?id=myPlaceRewards"
          >
            My Place Rewards
          </Styled(Anchor)>
          <styled.ul>
            <li
              key="pointsHistory"
            >
              <Styled(Anchor)
                anchorVariation="primary"
                asPath="/account/myPlaceRewards/pointsHistory"
                className={false}
                to="/account?id=pointsHistoryPage"
              >
                Points History
              </Styled(Anchor)>
            </li>
          </styled.ul>
        </li>
        <li
          id="myWallet"
          key="myWallet"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/myWalletPage"
            className={false}
            to="/account?id=myWalletPage"
          >
            My Wallet
          </Styled(Anchor)>
        </li>
        <li
          id="earnExtraPoints"
          key="earnExtraPoints"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/earnExtraPointsPage"
            className={false}
            to="/account?id=earnExtraPointsPage"
          >
            Earn Extra Points
          </Styled(Anchor)>
        </li>
        <li
          id="profileInformation"
          key="profileInformation"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/profileInformation"
            className={false}
            to="/account?id=profileInformation"
          >
            Profile Information
          </Styled(Anchor)>
        </li>
        <li
          id="addressBook"
          key="addressBook"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/addressBook"
            className={false}
            to="/account?id=addressBook"
          >
            Address Book
          </Styled(Anchor)>
        </li>
        <li
          id="paymentGiftCards"
          key="paymentGiftCards"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/paymentGiftCardsPage"
            className={false}
            to="/account?id=paymentGiftCardsPage"
          >
            Payment & Gift Cards
          </Styled(Anchor)>
        </li>
        <li
          id="myPreferences"
          key="myPreferences"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/myPreferencePage"
            className={false}
            to="/account?id=myPreferencePage"
          >
            My Preferences
          </Styled(Anchor)>
        </li>
        <li
          id="myPlaceRewardsCC"
          key="myPlaceRewardsCC"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/account/myPlaceRewardsCCPage"
            className={false}
            to="/account?id=myPlaceRewardsCCPage"
          >
            My Place Rewards Credit Card
          </Styled(Anchor)>
        </li>
      </styled.ul>
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 10,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <mockConstructor />
    </Styled(Col)>
  </Styled(Row)>
</Fragment>
`;

exports[`My Account Layout View should render only 2  links if navData has 2 links 1`] = `
<Fragment>
  <Styled(Row)>
    <Styled(Col)
      colSize={
        Object {
          "large": 2,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <styled.ul>
        <li
          id="myWallet"
          key="myWallet"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/myWalletPage"
            className={false}
          >
            My Wallet
          </Styled(Anchor)>
        </li>
        <li
          id="earnExtraPoints"
          key="earnExtraPoints"
        >
          <Styled(Anchor)
            anchorVariation="primary"
            asPath="/earnExtraPointsPage"
            className={false}
          >
            Earn Extra Points
          </Styled(Anchor)>
        </li>
      </styled.ul>
    </Styled(Col)>
    <Styled(Col)
      colSize={
        Object {
          "large": 10,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <mockConstructor />
    </Styled(Col)>
  </Styled(Row)>
</Fragment>
`;
